<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createJob"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateJob">


    <TextView
        android:id="@+id/createJobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Create Job"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jobTitle"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:hint="Job Title"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createJobTitle"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/description"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:hint="Description"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/hourlyRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTitle"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/hourlyRate"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:hint="Hourly Rate"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/employer_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:hint="longitude "
        app:layout_constraintBottom_toTopOf="@+id/lat"
        app:layout_constraintEnd_toStartOf="@+id/employer_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourlyRate"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/employer_email"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:hint="email here "
        app:layout_constraintBottom_toTopOf="@+id/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourlyRate"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/lat"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:hint="latitude "
        app:layout_constraintBottom_toTopOf="@+id/submitJobButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/submitJobButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="Submit Job!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hourlyRate" />

</androidx.constraintlayout.widget.ConstraintLayout>
