<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/history"
        android:layout_gravity="center_horizontal"
        android:text="History"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/jobs"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center_horizontal"
        android:text="Jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>