<resources>
    <string name="app_name">LoginFinal</string>
    <string name="name_empty">username is empty</string>
    <string name="pwd_empty">password is empty</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="google_maps_key">AIzaSyDR3TcP49rclnuPwjyQUgTltj7kvbBSn8c</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_jobs_maps">JobsMapsActivity</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>

    <string-array name="user_types">
        <item>Employee</item>
        <item>Employer</item>
    </string-array>

    <string-array name="categories">
        <item>IT/Computers</item>
        <item>Deliveries</item>
        <item>Cooking</item>
        <item>Household Chores</item>
        <item>Leisure</item>
        <item>Babysitting</item>
    </string-array>
</resources>